[package]
name = "block-mesh-manager"
version = { workspace = true }
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
fake = { workspace = true, features = ["derive"] }
wiremock = "0.6.3"

[dependencies]
dash-with-expiry = { path = "../dash-with-expiry", features = ["tokio"], optional = true }
lettre = { workspace = true, optional = true }
reqwest-websocket = { workspace = true }
flume = { workspace = true, default-features = false, features = ["async", "select"] }
headers = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
futures = { workspace = true }
twitter-v2 = { workspace = true, optional = true }
regex = { workspace = true }
redis = { workspace = true, optional = true, features = ["tokio-comp", "tokio-rustls-comp", "tls-rustls-insecure"] }
tower_governor = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
aws-sdk-sesv2 = { workspace = true, optional = true }
rayon = { workspace = true }
solana-sdk = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
futures-util = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true, features = ["background_threads"] }
logger-general = { path = "../logger-general", optional = true, features = ["sentry"] }
tracing-subscriber-wasm = { workspace = true }
console-subscriber = { workspace = true, optional = true }
num-traits = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "multipart",
  "json",
  "cookies",
  "rustls-tls"
] }
validator = { workspace = true, features = ["derive"] }
sentry = { workspace = true, optional = true }
url = { workspace = true }
askama = { workspace = true, features = ["serde_json"] }
askama_web = { workspace = true }
form_urlencoded = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"], optional = true }
http-body-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde", "wasmbind"] }
time = { workspace = true }
tracing = { workspace = true, optional = true }
serde-aux = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
futures-time = { workspace = true, optional = true }
enum-iterator = { workspace = true }
block-mesh-common = { path = "../block-mesh-common", default-features = false, optional = true }
database-utils = { path = "../database-utils", optional = true }
tokio = { workspace = true, features = ["full", "tracing"], optional = true }
axum-login = { workspace = true, optional = true }
tower-sessions-sqlx-store = { workspace = true, features = ["postgres"], optional = true }
axum = { workspace = true, features = ["ws", "macros"], optional = true }
tower = { workspace = true, features = ["util"], optional = true }
serde_json = { workspace = true, features = ["raw_value"] }
tower-http = { workspace = true, features = ["fs", "trace", "request-id", "util", "cors", "add-extension", "timeout", "set-header"], optional = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tracing-bunyan-formatter = { workspace = true, optional = true }
tracing-log = { workspace = true }
http = { workspace = true }
bcrypt = { workspace = true }
secret = { path = "../secret", features = ["sqlx"], optional = true }
cfg-if = { workspace = true }
log = { workspace = true }
block-mesh-manager-database-domain = { path = "../block-mesh-manager-database-domain", optional = true }
sentry-tower = { workspace = true, optional = true, features = ["axum", "http", "axum-matched-path"] }

[dependencies.getrandom]
workspace = true

[dependencies.rand]
workspace = true
features = ["min_const_gen"]

[dependencies.sqlx]
workspace = true
default-features = false
optional = true
features = [
  "any",
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "time",
  "migrate",
  "json",
  "bigdecimal",
  "tls-rustls"
]

[dependencies.uuid]
workspace = true
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde" # Enable serialization/deserialization of UUIDs
]

[lib]
crate-type = ["rlib"]

[features]
ssr = [
  "dep:dash-with-expiry",
  "block-mesh-common/intract",
  "block-mesh-common/solana",
  "block-mesh-common/ssr",
  "dep:lettre",
  "dep:futures-time",
  "dep:database-utils",
  "dep:console-subscriber",
  "dep:sentry-tower",
  "dep:block-mesh-manager-database-domain",
  "dep:twitter-v2",
  "dep:redis",
  "dep:tower_governor",
  "dep:aws-config",
  "dep:aws-sdk-sesv2",
  "dep:solana-sdk",
  "dep:tikv-jemallocator",
  "dep:tokio-stream",
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:tracing-bunyan-formatter",
  "dep:sqlx",
  "dep:tracing",
  "dep:tower-sessions-sqlx-store",
  "dep:axum-login",
  "dep:secret",
  "dep:logger-general",
  "dep:sentry"
]
