[package]
name = "block-mesh-solana-client"
version = { workspace = true }
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spl-memo = { workspace = true }
anyhow = { workspace = true }
anchor-lang = { workspace = true }
blockmesh-program = { path = "../../programs/blockmesh-program" }
block-mesh-common = { path = "../block-mesh-common" }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-account-decoder = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
hyper-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "js"] }
rustc-hash = { workspace = true }
secret = { path = "../secret" }
serde_json = { workspace = true }
base64 = { workspace = true }

[dependencies.sqlx]
optional = true
workspace = true
default-features = false
features = [
  "any",
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[features]
sqlx = ["dep:sqlx"]
