[package]
name = "blockmesh-leptos"
edition = "2021"
version = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
logger-leptos = { path = "../logger-leptos" }
leptos-use = { workspace = true }
leptos = { workspace = true, features = ["csr", "tracing"] }
tracing-wasm = { workspace = true }
anyhow = { workspace = true }
leptos_router = { workspace = true, features = ["csr"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
block-mesh-common = { path = "../block-mesh-common", features = ["http", "cli", "app-config"] }
solana-sdk = { workspace = true }
