[package]
name = "blockmesh-cli"
edition = "2021"
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { workspace = true }
clap = { workspace = true, features = ["derive"] }
block-mesh-common = { path = "../block-mesh-common", features = ["http", "clap", "feature-flag"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ['derive'] }
serde_json = { workspace = true }
reqwest = { workspace = true, default-features = false, features = [
  "json",
  "rustls-tls",
  "cookies"
] }
ureq = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng", "macro-diagnostics", "serde", "js"] }
chrono = { workspace = true }
speed-test = { path = "../speed-test" }
logger-general = { path = "../logger-general" }
futures-util = { workspace = true }
rayon = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
reqwest-websocket = { workspace = true }
rand = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
