[package]
name = "cloudflare-privacy-page"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "serde-json"] }
askama_axum = { version = "0.4.0" }
worker = { version = "0.7.1" }
tracing = { version = "0.1" }
tracing-web = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json"] }
time = { version = "0.3", features = ['wasm-bindgen'] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
wasm-bindgen = { version = "0.2.105" }
