[package]
name = "cloudflare-worker-echo-debug"
version = { workspace = true }
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rsyslog = { workspace = true }
syslog_rfc5424 = { workspace = true }
worker = { workspace = true }
tracing = { workspace = true }
tracing-web = { workspace = true }
tracing-subscriber = { workspace = true, features = ['time', 'json'] }
time = { workspace = true, features = ['wasm-bindgen'] }
serde = { workspace = true, features = ['derive'] }
serde_json = { workspace = true }
block-mesh-common = { path = "../block-mesh-common" }
reqwest = { workspace = true, features = [
  "json",
  "hickory-dns"
] }
anyhow = { workspace = true }

[dependencies.uuid]
workspace = true
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde", # Enable serialization/deserialization of UUIDs
  "js"
]