[package]
name = "cloudflare-worker-logger-proxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { workspace = true }
tracing = { workspace = true }
tracing-web = { workspace = true }
tracing-subscriber = { workspace = true, features = ['time', 'json'] }
time = { workspace = true, features = ['wasm-bindgen'] }
serde = { workspace = true, features = ['derive'] }
serde_json = { workspace = true }
block-mesh-common = { path = "../block-mesh-common" }
reqwest = { workspace = true, features = [
  "json",
  "hickory-dns"
] }
anyhow = { workspace = true }