[package]
name = "debug-area"
edition = "2021"
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version = "0.11" }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }