[package]
name = "debug-area"
edition = "2021"
authors.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = { workspace = true }
flume = { workspace = true, default-features = false, features = ["async", "select"] }
libc = { workspace = true }
database-utils = { path = "../database-utils" }
lettre = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws", "http2"] }
futures = { workspace = true }
futures-util = { workspace = true, features = ["sink", "std"] }
tokio-tungstenite = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }


[dependencies.sqlx]
workspace = true
default-features = false
features = [
  "any",
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "json",
  "bigdecimal",
  "tls-rustls"
]

[dependencies.uuid]
workspace = true
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde", # Enable serialization/deserialization of UUIDs
  "js"
]